--- a/index.html
+++ b/index.html
@@ -11,6 +11,118 @@
 </head>
 
 <body>
+    <header>
+
+    </header>
+
+    <!-- Main -->
+    <main>
+        <!-- top players and blogs -->
+        <section class="container">
+            <div class="top-players">
+                <h3 class="title">Top-Players</h3>
+
+                <div class="players">
+                    <div class="player">
+                        <img src="./images/players/player-1.png" alt="">
+                        <h3 class="playerName">top player-1</h3>
+                    </div>
+                    <div class="player">
+                        <img src="./images/players/player-2.png" alt="">
+                        <h3 class="playerName">top player-2</h3>
+                    </div>
+                    <div class="player">
+                        <img src="./images/players/player-3.png" alt="">
+                        <h3 class="playerName">top player-3</h3>
+                    </div>
+                    <div class="player">
+                        <img src="./images/players/player-4.png" alt="">
+                        <h3 class="playerName">top player-4</h3>
+                    </div>
+                    <div class="player">
+                        <img src="./images/players/player-5.png" alt="">
+                        <h3 class="playerName">top player-5</h3>
+                    </div>
+                    <div class="player">
+                        <img src="./images/players/player-6.png" alt="">
+                        <h3 class="playerName">top player-6</h3>
+                    </div>
+                </div>
+            </div>
+            <hr>
+
+            <div class="top-blogs">
+                <h2 class="title">Top-Blogs</h2>
+                <div class="blogs">
+                    <article class="blog">
+                        <div class="thumbnail">
+                            <img src="./images/blogs/blog-1.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <div class="blog-title">
+                                <h3 class="blogArticle">
+                                    13 of my faviorite UI/UX goodies
+                                </h3>
+                                <p class="author">
+                                    By <a href="">Danny Sapio</a>
+                                </p>
+                            </div>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thumbnail">
+                            <img src="./images/blogs/blog-2.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <div class="blog-title">
+                                <h3 class="blogArticle">
+                                    13 of my faviorite UI/UX goodies
+                                </h3>
+                                <p class="author">
+                                    By <a href="">Danny Sapio</a>
+                                </p>
+                            </div>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thumbnail">
+                            <img src="./images/blogs/blog-3.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <div class="blog-title">
+                                <h3 class="blogArticle">
+                                    13 of my faviorite UI/UX goodies
+                                </h3>
+                                <p class="author">
+                                    By <a href="">Danny Sapio</a>
+                                </p>
+                            </div>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thumbnail">
+                            <img src="./images/blogs/blog-4.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <div class="blog-title">
+                                <h3 class="blogArticle">
+                                    13 of my faviorite UI/UX goodies
+                                </h3>
+                                <p class="author">
+                                    By <a href="">Danny Sapio</a>
+                                </p>
+                            </div>
+                        </div>
+                    </article>
+                </div>
+
+            </div>
+        </section>
+        <!-- top players and blogs -->
+
+
+    </main>
+    <!-- Main -->
 
 </body>
 
