--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leader Board</title>
+    <!-- font Awsome -->
+    <script src="https://kit.fontawesome.com/92a78f779a.js" crossorigin="anonymous"></script>
     <!-- Main Css -->
     <link rel="stylesheet" href="style.css">
 </head>
@@ -119,6 +121,104 @@
             </div>
         </section>
         <!-- top players and blogs -->
+
+        <!-- Latest course -->
+        <section class="container">
+            <h2 class="title">Latest Course</h2>
+
+            <div class="courses">
+                <div class="course">
+                    <div class="course-banner">
+                        <img src="./images/courses/course-1.png" alt="">
+                    </div>
+                    <div class="courseDetails">
+                        <h3 class="course-title">
+                            React The Complete Guide-2020
+                        </h3>
+                        <p class="author">
+                            Reed Krackoff
+                        </p>
+                    </div>
+
+                    <div class="course-info">
+                        <div>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star empty"></i>
+                            <span>4.5</span>
+                        </div>
+
+
+                        <div class="course-time">
+                            <i class="far fa-clock time"></i> <span class="hour">1.30hr</span>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="course">
+                    <div class="course-banner">
+                        <img src="./images/courses/course-2.png" alt="">
+                    </div>
+                    <div class="courseDetails">
+                        <h3 class="course-title">
+                            React The Complete Guide-2020
+                        </h3>
+                        <p class="author">
+                            Reed Krackoff
+                        </p>
+                    </div>
+
+                    <div class="course-info">
+                        <div>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star empty"></i>
+                            <span>4.5</span>
+                        </div>
+
+
+                        <div class="course-time">
+                            <i class="far fa-clock time"></i> <span class="hour">1.30hr</span>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="course ">
+                    <div class="course-banner">
+                        <img src="./images/courses/course-3.png" alt="">
+                    </div>
+                    <div class="courseDetails">
+                        <h3 class="course-title">
+                            React The Complete Guide-2020
+                        </h3>
+                        <p class="author">
+                            Reed Krackoff
+                        </p>
+                    </div>
+
+                    <div class="course-info">
+                        <div>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star empty"></i>
+                            <span>4.5</span>
+                        </div>
+
+
+                        <div class="course-time">
+                            <i class="far fa-clock time"></i> <span class="hour">1.30hr</span>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
 
 
     </main>
